separate some sufficient statistic material from estimate.tex to kl_basis.tex

--- a/common/com_channel.tex
+++ b/common/com_channel.tex
@@ -3,6 +3,9 @@
 % Daniel J. Greenhoe
 %============================================================================
 %======================================
+\chapter{Communication channels}
+%======================================
+%======================================
 \section{System model}
 %======================================
 \begin{figure}[ht] \color{figcolor}
