mse references. mise definition

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -66,6 +66,15 @@
   urla         = {http://www.amazon.com/dp/1461250560},
   }
 
+@book{bendat1966,
+  author       = {Julius S. Bendat and Allan G. Piersol},
+  title        = {Measurement and Analysis of Random Data},
+  publisher    = {John Wiley \& Sons},
+  pages        = {390+xvi},
+  language     = {English},
+  year         = {1966},
+  }
+
 @article{bendat1978,
   journal      = {Journal of Sound and Vibration},
   volume       = {59},
@@ -770,6 +779,19 @@
   language     = {French},
   }
 
+@article{rosenblatt1956,
+  author       = {Murray Rosenblatt},
+  year         = {1956},
+  month        = {September},
+  title        = {Remarks on some non-parametric estimates of a density function},
+  journal      = {Annals of Mathematical Statistics},
+  volume       = {27},
+  number       = {3},
+  pages        = {832--837},
+  url          = {https://link.springer.com/content/pdf/10.1007/978-1-4419-8339-8_13.pdf},
+  note         = {\url{https://projecteuclid.org/download/pdf_1/euclid.aoms/1177728190}},
+  }  
+
 @book{ross,
   author       = {Sheldon Ross},
   title        = {A First Course in Probability},
@@ -835,6 +857,34 @@
   author       = {P.K Sahoo and S. Soltani and A. K. C. Wong},
   doi          = {https://doi.org/10.1016/0734-189X(88)90022-9},
   url          = {https://pequan.lip6.fr/~bereziat/pima/2014/sahoo88.pdf},
+  }
+
+@book{silverman1986,
+  isbn         = {9780412246203},
+  isbn10       = {0412246201},
+  title        = {Density Estimation for Statistics and Data Analysis},
+  volume       = {26},
+  series       = {Chapman \& Hall/CRC Monographs on Statistics \& Applied Probability},
+  author       = {Bernard. W. Silverman},
+  edition      = {illustrated, reprint},
+  publisher    = {CRC Press},
+  year         = {1986},
+  pages        = {176},
+  url          = {http://books.google.com/books?vid=ISBN9780412246203},
+  urlw         = {http://www.worldcat.org/isbn/9780412246203},
+  }
+
+@book{stuart1991,
+  isbn10       = {0340560231},
+  isbn         = {9780340560235},
+  title        = {Kendall's Advanced Theory of Statistics Volume 2 Classical Inference and Relationship},
+  author       = {Alan Stuart and J. Keith Ord},
+  publisher    = {Hodder \& Stoughton},
+  year         = {1991},
+  edition      = {5},
+  publisher    = {Oxford University Press},
+  url          = {http://books.google.com/books?vid=ISBN9780340560235},
+  urla         = {http://www.amazon.com/dp/9780340560235},
   }
 
 @book{suhov2005,
