--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1905,7 +1905,9 @@
  \newcommand{\fdots}  {\dot{s}}
  \newcommand{\fn  }   {\fnct{n}}
 
-\newcommand{\mse}[0]{\mathfnct{mse}}
+\newcommand{\mse}{\mathfnct{mse}} % mean square error
+\newcommand{\mise}{\mathfnct{mse}} % mean integrated square error
+\newcommand{\nre}{\mathfnct{\epsilon}} % normalized rms error
 \newcommand{\mean}{\mu}
 \newcommand{\meanest}{\hat{\mean}}
 
