--- a/common/randseq.tex
+++ b/common/randseq.tex
@@ -79,6 +79,17 @@ Let $\rvx(n)$ and $\rvy(n)$ be \fncte{random sequence}s.\\
 \end{array}}
 \end{definition}
 
+The definitions for $\Rxy(m)$ and $\Rxx(m)$ involve complex numbers. 
+This may seem curious when typical ADCs provide real-valued sequences.
+Note however that complex-valued sequences often come up in signal processing due to 
+two common situations:\footnote{
+  \citerpg{marple1987}{?}{9780132141499}
+  %\citerpg{marple2019}{?}{9780486780528},
+  }
+\begin{enume}
+  \item The presence of an FFT operator in the signal processing path
+  \item communications channel processing involving phase discrimination (e.g. PSK and QAM).
+\end{enume}
 %---------------------------------------
 \section{Properties}
 %---------------------------------------
