--- a/common/normalg.tex
+++ b/common/normalg.tex
@@ -192,14 +192,14 @@ Let $\opair{\algA}{\normn}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
 %---------------------------------------
 Let $\opair{\algA}{\normn}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
 \thmbox{
-  \mcom{ x= x^\invo \text{ and }  y= y^\invo}{$ x$ and $ y$ are hermitian}
+  \mcom{ x= x^\invo \text{ and }  y= y^\invo}{$ x$ and $ y$ are \prope{hermitian}}
   \qquad\implies\qquad
   \left\{
     \begin{array}{lcl @{\qquad}D}
        x+ y   &=& ( x+ y  )^\invo & \text{($x+ y$ is self adjoint)} \\
       %\alpha  x &=& \bar{\alpha}  x^\invo & \text{($\alpha  x$ is self adjoint)} \\
        x^\invo   &=& ( x^\invo  )^\invo & \text{($x^\invo$ is self adjoint)} \\
-      \mc{4}{l}{\ds \mcom{ x  y   = ( x  y  )^\invo}{$( x y)$ is hermitian} \iff \mcom{ x y= y x}{commutative}}
+      \mc{4}{l}{\ds \mcom{ x  y   = ( x  y  )^\invo}{$( x y)$ is \prope{hermitian}} \iff \mcom{ x y= y x}{commutative}}
     \end{array}
   \right.
   }
@@ -278,13 +278,13 @@ Let $\opair{\algA}{\normn}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
 %---------------------------------------
 Let $\opair{\algA}{\invo}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
 \thmbox{\begin{array}{rcl @{\qquad}C @{\qquad}D}
-  \Re x &=& \brp{\Re x}^\invo & \forall  x\in\algA & ($\Re x$ is hermitian)\\
-  \Im x &=& \brp{\Im x}^\invo & \forall  x\in\algA & ($\Im x$ is hermitian)
+  \Real x &=& \brp{\Real x}^\invo & \forall  x\in\algA & ($\Real x$ is \prope{hermitian})\\
+  \Imag x &=& \brp{\Imag x}^\invo & \forall  x\in\algA & ($\Imag x$ is \prope{hermitian})
 \end{array}}
 \end{theorem}
 \begin{proof}
   \begin{align*}
-    \brp{\Re x}^\invo
+    \brp{\Real x}^\invo
       &= \brp{\frac{1}{2  }\brp{ x+ x^\invo}}^\invo
       && \text{by definition of $\Re$}
       && \text{\xref{def:nalg_Re}}
@@ -294,11 +294,11 @@ Let $\opair{\algA}{\invo}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
     \\&= \frac{1}{2  }\brp{ x^\invo+ x}
       && \text{by \prope{involutory} property of $\invo$}
       && \text{\xref{def:staralg}}
-    \\&= \Re x
+    \\&= \Real x
       && \text{by definition of $\Re$}
       && \text{\xref{def:nalg_Re}}
     \\
-    \brp{\Im x}^\invo
+    \brp{\Imag x}^\invo
       &= \brp{\frac{1}{2i}\brp{ x- x^\invo}}^\invo
       && \text{by definition of $\Im$}
       && \text{\xref{def:nalg_Im}}
@@ -308,7 +308,7 @@ Let $\opair{\algA}{\invo}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
     \\&= \frac{1}{2i }\brp{ x^\invo- x}
       && \text{by \prope{involutory} property of $\invo$}
       && \text{\xref{def:staralg}}
-    \\&= \Im x
+    \\&= \Imag x
       && \text{by definition of $\Im$}
       && \text{\xref{def:nalg_Im}}
   \end{align*}
@@ -329,12 +329,12 @@ Let $\opair{\algA}{\invo}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
 \thmbox{
    a =  x + i y
   \qquad\iff\qquad
-   x=\Re a \quad\text{and}\quad  y=\Im a
+   x=\Real a \quad\text{and}\quad  y=\Imag a
   }
 \end{theorem}
 \begin{proof}
   \begin{liste}
-    \item Proof that $ a =  x + i y \implies  x=\Re a \quad\text{and}\quad  y=\Im a$:
+    \item Proof that $ a =  x + i y \implies  x=\Real a \quad\text{and}\quad  y=\Imag a$:
       \begin{align*}
                    &&  a  &=  x + i y                 && \text{by left hypothesis}
         \\\implies &&  a^\invo &= \brp{ x+i y}^\invo  
@@ -349,7 +349,7 @@ Let $\opair{\algA}{\invo}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
         \\\implies &&  x+ x &=  a+ a^\invo         && \text{by adding previous 2 equations}
         \\\implies && 2 x &=  a+ a^\invo             && \text{by solving for $ x$ in previous equation}
         \\\implies &&  x  &= \frac{1}{2}\brp{ a+ a^\invo}
-        \\         &&       &= \Re a                
+        \\         &&       &= \Real a                
                    && \text{by definition of $\Re$} 
                    && \text{\xref{def:nalg_Re}}
         \\         && 
@@ -357,17 +357,17 @@ Let $\opair{\algA}{\invo}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
         \\         && i y &= - a^\invo +  x          && \text{by solving for $i y$ in $ a = x+i y$ equation}
         \\\implies && i y+i y &=  a- a^\invo       && \text{by adding previous 2 equations}
         \\\implies &&  y  &= \frac{1}{2i}\brp{ a- a^\invo} && \text{by solving for $i y$ in previous equations}
-        \\         &&       &= \Im a                
+        \\         &&       &= \Imag a                
                    && \text{by definition of $\Im$}
                    && \text{\xref{def:nalg_Im}}
       \end{align*}
 
-    \item Proof that $ a =  x + i y \impliedby  x=\Re a \quad\text{and}\quad  y=\Im a$:
+    \item Proof that $ a =  x + i y \impliedby  x=\Real a \quad\text{and}\quad  y=\Imag a$:
       \begin{align*}
          x + i y
-          &= \Re a + i\,\Im a
+          &= \Real a + i\,\Imag a
           && \text{by right hypothesis}
-        \\&= \mcom{\frac{1}{2}\brp{ a+ a^\invo}}{$\Re a$} + i\mcom{\frac{1}{2i}\brp{ a- a^\invo}}{$\Im a$}
+        \\&= \mcom{\frac{1}{2}\brp{ a+ a^\invo}}{$\Real a$} + i\mcom{\frac{1}{2i}\brp{ a- a^\invo}}{$\Imag a$}
           && \text{by definition of $\Re$ and $\Im$}
           && \text{\xref{def:nalg_Re}}
         \\&= \brp{\frac{1}{2} a+\frac{1}{2} a} + 
@@ -376,11 +376,6 @@ Let $\opair{\algA}{\invo}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
       \end{align*}
   \end{liste}
 \end{proof}
-
-
-
-
-
 
 %=======================================
 \section{Normed Algebras}
@@ -445,16 +440,13 @@ Let $\algA$ be an algebra.
   \end{enumerate}
 \end{proof}
 
-
 %---------------------------------------
-\begin{theorem}[Gelfand-Mazur Theorem]
+\begin{theorem}[\thmd{Gelfand-Mazur Theorem}]
 \footnote{
   \citerpg{folland1995}{4}{0849384907},
   \citePc{mazur1938}{(statement)},
   \citePc{gelfand1941}{(proof)}
   }
-\index{Gelfand-Mazur Theorem}
-\index{theorems!Gelfand-Mazur}
 %---------------------------------------
 Let $\C$ be the field of complex numbers.
 \thmbox{
