historical least squares references

--- a/common/norm_minimization.tex
+++ b/common/norm_minimization.tex
@@ -54,11 +54,16 @@
 Norm minimization techniques are very powerful
 in that an optimum solution can be computed
 in one step without iteration or recursion.
-In this section we present two types of norm minimization:
-\footnote{
+In this section we present two types of norm minimization:\footnote{
    The Least Squares algorithm is nothing new to mathematics.
-   It was first developed in 1795 by Gauss who was also the first
-   to discover the FFT.
+   It was first published by Legendre in 1805, but there is a credible claim by Gauss
+   that he had it as far back as 1795.
+   Gauss, by the way, was also the first to discover the FFT.
+   References: 
+   \citePp{sorenson1970}{63},
+   \citeP{plackett1972},
+   \citeP{stigler1981},
+   \citeP{dutka1995}
    }
 
 \begin{enume}
