--- a/common/bib/mathhist.bib
+++ b/common/bib/mathhist.bib
@@ -222,6 +222,19 @@
   language     = {English},
   }
 
+@article{dutka1995,
+  title        = {On Gauss' Priority in the Discovery of the Method of Least Squares},
+  author       = {Jacques Dutka},
+  journal      = {Archive for History of Exact Sciences},
+  volume       = {49},
+  number       = {4},
+  month        = {December},
+  year         = {1995},
+  pages        = {355--370},
+  publisher    = {Springer},
+  url          = {https://www.jstor.org/stable/41134010},
+  }
+
 @article{edf1812jan6,
   author       = {Joseph-Louis Lagrange and Pierre-Simon Laplace and /'Etienne Louis Malus and Ren/'e Just Ha/:uy and Adrien-Marie Legendre},
   publisher    = {S{/'e}ance publique de I'nstitut Imp{/'e}rial de France},
@@ -698,6 +711,21 @@
   url         = {http://books.google.com/books?&id=Z-0MJw8K8CgC},
   }
 
+@article{plackett1972,
+  title       = {Studies in the History of Probability and Statistics. XXIX: The Discovery of the Method of Least Squares},
+  author      = {R. L. Plackett},
+  journal     = {Biometrika},
+  volume      = {59},
+  number      = {2},
+  month       = {August},
+  year        = {1972},
+  pages       = {239--251},
+  publisher   = {Oxford University Press on behalf of Biometrika Trust},
+  doi         = {10.2307/2334569},
+  url         = {https://www.jstor.org/stable/2334569},
+  note        = {\url{https://doi.org/10.1093/biomet/59.2.239}},
+  }
+
 @book{poincare_vos,
   author      = {Henri Poincar{/'e}},
   title       = {Valeur de la Science},
@@ -884,6 +912,17 @@
   urla         = {http://www.amazon.com/dp/0883855615},
   }
 
+@article{sorenson1970,
+  title        = {Least-squares estimation: from Gauss to Kalman},
+  author       = {H. W. Sorenson},
+  institution  = {University of California, San Diego},
+  journal      = {IEEE Spectrum},
+  month        = {July},
+  year         = {1970},
+  pages        = {63--68},
+  url          = {https://www2.pv.infn.it/~fontana/download/lect/Sorenson.pdf},
+  }
+
 @article{snell1997,
   title        = {A Conversation with Joe Doob},
   author       = {J. Laurie Snell},
@@ -905,6 +944,20 @@
   number       = {1},
   pages        = {247--256},
   url          = {http://projecteuclid.org/euclid.jap/1110381384},
+  }
+
+@article{stigler1981,
+  title        = {Gauss and the Invention of Least Squares},
+  author       = {Stephen M. Stigler},
+  journal      = {The Annals of Statistics},
+  volume       = {9},
+  number       = {3},
+  month        = {May},
+  year         = {1981},
+  pages        = {465--474},
+  publisher    = {Institute of Mathematical Statistics},
+  url          = {https://projecteuclid.org/euclid.aos/1176345451},
+  note         = {\url{https://www.jstor.org/stable/2240811}},
   }
 
 @book{stillwell2002,
