change most random variables from \mbf_ to \mathsfup

--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1617,24 +1617,24 @@
 %--------------------------------------
 % random variables
 %--------------------------------------
-\newcommand{\rva}[0]{\mbfa}
-\newcommand{\rve}[0]{\mbfe}
-\newcommand{\rvp}[0]{\mbfp}
-\newcommand{\rvq}[0]{\mbfq}
-\newcommand{\rvu}[0]{\mbfu}
-\newcommand{\rvm}[0]{\mbfm}
-\newcommand{\rvw}[0]{\mbfw}
-\newcommand{\rvv}[0]{\mbfv}
-\newcommand{\rvx}[0]{\mbfx}
-\newcommand{\rvy}[0]{\mbfy}
-\newcommand{\rvr}[0]{\mbfr}
-\newcommand{\rvz}[0]{\mbfz}
-\newcommand{\rvs}[0]{\mbfs}
+\newcommand{\rva}[0]{\mathfnct{a}}%{\mbfa}
+\newcommand{\rve}[0]{\mathfnct{e}}%{\mbfe}
+\newcommand{\rvp}[0]{\mathfnct{p}}%{\mbfp}
+\newcommand{\rvq}[0]{\mathfnct{q}}%{\mbfq}
+\newcommand{\rvu}[0]{\mathfnct{u}}%{\mbfu}
+\newcommand{\rvm}[0]{\mathfnct{m}}%{\mbfm}
+\newcommand{\rvw}[0]{\mathfnct{w}}%{\mbfw}
+\newcommand{\rvv}[0]{\mathfnct{v}}%{\mbfv}
+\newcommand{\rvx}[0]{\mathfnct{x}}%{\mbfx}
+\newcommand{\rvy}[0]{\mathfnct{y}}%{\mbfy}
+\newcommand{\rvr}[0]{\mathfnct{r}}%{\mbfr}
+\newcommand{\rvz}[0]{\mathfnct{z}}%{\mbfz}
+\newcommand{\rvs}[0]{\mathfnct{s}}%{\mbfs}
 \newcommand{\rvt}[0]{\mbftheta}
-\newcommand{\rvW}[0]{\fnct{W}}
-\newcommand{\rvX}[0]{\fnct{X}}
-\newcommand{\rvY}[0]{\fnct{Y}}
-\newcommand{\rvZ}[0]{\fnct{Z}}
+\newcommand{\rvW}[0]{\mathfnct{W}}
+\newcommand{\rvX}[0]{\mathfnct{X}}
+\newcommand{\rvY}[0]{\mathfnct{Y}}
+\newcommand{\rvZ}[0]{\mathfnct{Z}}
 
 %--------------------------------------
 % Statistics
